Before trying memory.copy or i32 loop

--- a/templates/htmlStub.html
+++ b/templates/htmlStub.html
@@ -39,6 +39,16 @@
                       }
                     console.log(i, numToBin(i));
                     return i;
+                },
+				i64: function (i) {
+                    function numToBin(num) {
+                        return (BigInt(num) >> BigInt(0))
+                          .toString(2)
+                          .padStart(64, '0')
+                          .match(/.{1,8}/g)
+                          .join('_');
+                      }
+                    console.log(i, numToBin(i));
                 }
 			},
 			x: {
